--- a/public/scss/_projects.scss
+++ b/public/scss/_projects.scss
@@ -15,6 +15,12 @@
 		@extend .card-body;
 	}
 
+	img {
+		object-fit: contain;
+		min-width: 100%;
+		height: auto;
+	}
+
 	.project-title,
 	.project-text {
 		text-decoration: none;
@@ -38,3 +44,5 @@
 		background-color: $primary;
 	}
 }
+
+// Project Carousel
