--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -83,6 +83,7 @@ button {
 
 #leaf {
 	width: 16px;
+	height: 16px;
 }
 
 // Mobile NAV
@@ -196,13 +197,16 @@ button {
 }
 
 // Review star system
-.checked {
-	color: gold;
-}
+// .checked {
+// 	color: gold;
+// }
 // END OF UTILITIES
 
 // MEDIA QUERIES
 
+//  XL AND UP
+@media only screen and (min-width: 1440px) {
+}
 //  LG AND UP
 @media only screen and (min-width: 1024px) {
 }
@@ -249,6 +253,7 @@ button {
 
 	.logo {
 		width: 80px;
+		height: auto;
 	}
 
 	// Adjust section margins
