--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,9 +1,5 @@
 @import "./variables";
 
-// .btn-outline-light #quote-btn:hover {
-// 	background-color: map-get($theme-colors, "accent-tca");
-// }
-
 .active,
 .nav-link:hover {
 	border-bottom: 3px solid map-get($theme-colors, "primary-tca");
@@ -22,6 +18,7 @@
 // TCA logo
 .logo {
 	width: 120px;
+	height: auto;
 }
 
 // Media Queries
