--- a/src/app.css
+++ b/src/app.css
@@ -68705,6 +68705,24 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #fff;
 }
 
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%;
+  /* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.service-card {
+  background-color: #000;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .btn-cta {
   background: #12487b;
   color: #fff;
