--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,6 +3,8 @@
 @import "./projects";
 @import "./about";
 @import "./carousel";
+@import "./reactPlayer";
+@import "./serviceCards";
 @import "../../node_modules/bootstrap/scss/utilities";
 
 .btn-cta {
