--- a/src/app.css
+++ b/src/app.css
@@ -8182,11 +8182,11 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #212529;
 }
 
-.carousel {
+.carousel, .hero-carousel {
   position: relative;
 }
 
-.carousel.pointer-event {
+.carousel.pointer-event, .pointer-event.hero-carousel {
   -ms-touch-action: pan-y;
       touch-action: pan-y;
 }
@@ -22027,11 +22027,11 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #212529;
 }
 
-.carousel {
+.carousel, .hero-carousel {
   position: relative;
 }
 
-.carousel.pointer-event {
+.carousel.pointer-event, .pointer-event.hero-carousel {
   -ms-touch-action: pan-y;
       touch-action: pan-y;
 }
@@ -35887,11 +35887,11 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #212529;
 }
 
-.carousel {
+.carousel, .hero-carousel {
   position: relative;
 }
 
-.carousel.pointer-event {
+.carousel.pointer-event, .pointer-event.hero-carousel {
   -ms-touch-action: pan-y;
       touch-action: pan-y;
 }
@@ -49750,11 +49750,11 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #212529;
 }
 
-.carousel {
+.carousel, .hero-carousel {
   position: relative;
 }
 
-.carousel.pointer-event {
+.carousel.pointer-event, .pointer-event.hero-carousel {
   -ms-touch-action: pan-y;
       touch-action: pan-y;
 }
@@ -63606,11 +63606,11 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #212529;
 }
 
-.carousel {
+.carousel, .hero-carousel {
   position: relative;
 }
 
-.carousel.pointer-event {
+.carousel.pointer-event, .pointer-event.hero-carousel {
   -ms-touch-action: pan-y;
       touch-action: pan-y;
 }
@@ -68669,24 +68669,24 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   height: 32rem;
 }
 
-.hero-carousel .carousel-item > img {
+.hero-carousel .hero-container .hero-inner picture source,
+.hero-carousel .hero-container .hero-inner img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 32rem;
+  min-height: 100%;
 }
 
 .hero-carousel .hero-container .hero-inner::before {
   content: "";
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: -webkit-gradient(linear, right top, left top, from(#12487b), to(black));
   background: linear-gradient(270deg, #12487b, black);
   opacity: 0.35;
   background-size: cover;
-  overflow: hidden;
   color: white;
   z-index: 1;
 }
@@ -68701,7 +68701,7 @@ fieldset:disabled .hero-carousel .hero-container .hero-btn,
   color: #fff;
 }
 
-.hero-carousel .hero-container .hero-btn:hover {
+.hero-carousel .hero-container .hero-btn .hero-btn:hover {
   color: #fff;
 }
 
@@ -68780,7 +68780,7 @@ button {
 
 .nav-banner {
   color: #fff;
-  padding: 0 8px;
+  padding: 8px;
   background-color: #12487b;
 }
 
@@ -68915,7 +68915,7 @@ button {
 @media only screen and (max-width: 425px) {
   .nav-banner {
     font-size: 11px;
-    padding: 0;
+    padding: 8px 0;
   }
   .hero-btn {
     padding: 8px;
