--- a/src/scss/_carousel.scss
+++ b/src/scss/_carousel.scss
@@ -2,6 +2,7 @@
 @import "../../node_modules/bootstrap/scss/utilities";
 
 .hero-carousel {
+	@extend .carousel;
 	margin-bottom: 4rem;
 
 	/* Since positioning the image, we need to help out the caption */
@@ -14,25 +15,28 @@
 	.carousel-item {
 		height: 32rem;
 	}
-	.carousel-item > img {
-		position: absolute;
-		top: 0;
-		left: 0;
-		min-width: 100%;
-		height: 32rem;
-	}
+
 	.hero-container {
 		// Card link container
+
+		.hero-inner picture source,
+		.hero-inner img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			min-width: 100%;
+			min-height: 100%;
+		}
 
 		.hero-inner::before {
 			content: "";
 			position: absolute;
 			width: 100%;
-			height: 100%;
+			min-height: 100%;
 			background: linear-gradient(270deg, $primary-alt, black);
 			opacity: 0.35;
 			background-size: cover;
-			overflow: hidden;
+
 			color: white;
 			z-index: 1;
 		}
@@ -46,10 +50,10 @@
 			font-size: 20px;
 			text-transform: uppercase;
 			color: $white-tca;
-		}
 
-		.hero-btn:hover {
-			color: $white-tca;
+			.hero-btn:hover {
+				color: $white-tca;
+			}
 		}
 	}
 }
