--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,8 +5,10 @@
 @import "./carousel";
 @import "./reactPlayer";
 @import "./serviceCards";
+@import "./reviewForm";
 @import "../../node_modules/bootstrap/scss/utilities";
 
+// Hero Button
 .btn-cta {
 	background: #12487b;
 	color: #fff;
