--- a/src/scss/_carousel.scss
+++ b/src/scss/_carousel.scss
@@ -49,10 +49,10 @@
 			@extend .btn;
 			font-size: 20px;
 			text-transform: uppercase;
-			color: $white-tca;
+			color: white;
 
 			.hero-btn:hover {
-				color: $white-tca;
+				color: white;
 			}
 		}
 	}
